tests/snapshots/roundtrip__post_insert.snap
---
source: tests/roundtrip.rs
expression: "Post::INSERT"
---
INSERT INTO posts (id, title, author_name, author_karma, sig_data, sig_hash) VALUES (:id, :title, :author_name, :author_karma, :sig_data, :sig_hash) ON CONFLICT DO NOTHING
