tests/snapshots/roundtrip__schema_constant_concatenates_create_tables.snap
---
source: tests/roundtrip.rs
expression: "catalog::SCHEMA"
---
CREATE TABLE IF NOT EXISTS alpha (
    id INTEGER NOT NULL,
    PRIMARY KEY (id)
) WITHOUT ROWID;
CREATE TABLE IF NOT EXISTS beta (
    id INTEGER NOT NULL,
    label TEXT NOT NULL,
    PRIMARY KEY (id)
) WITHOUT ROWID;
