tests/snapshots/roundtrip__tracked_item_insert.snap
---
source: tests/roundtrip.rs
expression: "TrackedItem::INSERT"
---
INSERT INTO tracked_items (id, payload) VALUES (:id, :payload) ON CONFLICT(id) DO UPDATE SET __last_written_ms = MAX(__last_written_ms, unixepoch('now') * 1000)
