tests/snapshots/roundtrip__tracked_item_select.snap
---
source: tests/roundtrip.rs
expression: "TrackedItem::SELECT"
---
SELECT id, payload FROM tracked_items
