tests/snapshots/roundtrip__versioned_object_create_table.snap
---
source: tests/roundtrip.rs
expression: "VersionedObject::CREATE_TABLE"
---
CREATE TABLE IF NOT EXISTS versioned_objects (
    row_id INTEGER PRIMARY KEY,
    hash BLOB NOT NULL UNIQUE,
    data BLOB NOT NULL,
    __last_written_ms INTEGER NOT NULL DEFAULT (unixepoch('now') * 1000)
);
