tests/snapshots/roundtrip__versioned_object_select.snap
---
source: tests/roundtrip.rs
expression: "VersionedObject::SELECT"
---
SELECT hash, data FROM versioned_objects
