tests/snapshots/roundtrip__widget_insert.snap
---
source: tests/roundtrip.rs
expression: "Widget::INSERT"
---
INSERT INTO widgets (id, name) VALUES (:id, :name) ON CONFLICT DO NOTHING
